# AI-Training-Coach

./: .env.example  .gitignore  .mcp.json  README.md  datasette-metadata.yaml  pyproject.toml  start.bat
.claude/: settings.local.json
agent/: graph.py  nodes.py  tools.py  types.py
api/: main.py
garmin-givemydata/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_endpoint.yml
garmin-givemydata/.github/workflows/: ci.yml  publish.yml
garmin-givemydata/garmin_client/: client.py
garmin-givemydata/garmin_mcp/: db.py  server.py  sync.py
memory/: client.py
ui/: app.py
